--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,6 +3,6 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  /* padding: 6rem; */
   min-height: calc(100vh - 100px);
 }
