--- a/styles/intro.module.css
+++ b/styles/intro.module.css
@@ -5,26 +5,48 @@
 }
 
 .introContainer h1 {
-  font-size: 4.5rem;
+  font-size: 3.375rem;
   letter-spacing: 3px;
-  margin: 0 0 35px;
+  margin: 0 0 21px;
 }
 
 .introContainer h2 {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   color: var(--accent-green);
-  margin: 0 0 50px;
+  margin: 0 0 30px;
 }
 
 .introContainer h4 {
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-weight: 300;
-  margin: 50px 0 30px;
+  margin: 30px 0 18px;
 }
 
 .introContainer p {
-  font-size: 1.5rem;
+  font-size: 1rem;
   letter-spacing: 1px;
   font-weight: 200;
-  margin: 80px 0 0;
+  margin: 48px 0 0;
+}
+
+@media (min-width: 768px) {
+  .introContainer h1 {
+    font-size: 4.5rem;
+    margin: 0 0 35px;
+  }
+  
+  .introContainer h2 {
+    font-size: 2.5rem;
+    margin: 0 0 50px;
+  }
+  
+  .introContainer h4 {
+    font-size: 2rem;
+    margin: 50px 0 30px;
+  }
+  
+  .introContainer p {
+    font-size: 1.5rem;
+    margin: 80px 0 0;
+  }
 }
