--- a/styles/globals.css
+++ b/styles/globals.css
@@ -358,8 +358,14 @@ template {
 
 :root {
   --background-primary: #020c1b;
-  --white: #fff;
+  --body: #fff;
   --accent-green: #50edb4;
+}
+
+[data-theme="dark"] {
+  --background-primary: #fff;
+  --body: #020c1b;
+  --accent-green: #3FC58E;
 }
 
 html {
@@ -369,7 +375,7 @@ html {
 }
 
 body {
-  color: var(--white);
+  color: var(--body);
   font-size: 16px;
 }
 
@@ -378,27 +384,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-  color: var(--white);
+  color: var(--body);
   text-decoration: none;
   position: relative;
 }
-
-  /* a::before {
-    content: '';
-    background-color: var(--accent-green);
-    position: absolute;
-    left: 0;
-    bottom: 3px;
-    width: 100%;
-    height: 8px;
-    z-index: -1;
-    transition: all .3s ease-in-out;
-  }
-
-  a:hover::before {
-    bottom: 0;
-    height: 100%;
-  } */
 
 p, a, li {
   font-size: 1.3rem;
@@ -407,7 +396,7 @@ p, a, li {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 2.5rem;
   font-weight: 900;
 }
 
@@ -430,4 +419,33 @@ h2 {
 .pageContainer A {
   text-decoration: underline;
   text-decoration-color: var(--accent-green);
+}
+
+.blog h1 {
+  margin-top: 0.25em;
+}
+
+.themeToggle {
+  height: 25px;
+  width: 25px;
+  cursor: pointer;
+}
+
+#moon {
+  display: none;
+}
+
+[data-theme="dark"] #sun {
+  display: none;
+}
+
+[data-theme="dark"] #moon {
+  display: block;
+}
+
+
+@media (min-width: 992px) {
+  h1 {
+    font-size: 4rem;
+  }
 }
