--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,5 +1,5 @@
 .nav {
-  height: 100px;
+  /* height: 100px; */
   width: 90%;
   margin: 0 auto;
 }
@@ -9,7 +9,8 @@
   }
 
   .nav a:not(:last-child) {
-    padding: 0 1.5em 0 0;
+    /* padding: 0 1.5em 0 0; */
+    margin: 0 1.5em 0 0;
   }
 
   .nav a:hover {
@@ -22,7 +23,7 @@
 }
 
 .navRight {
-
+  /* align-items: center; */
 }
 
 .logo {
@@ -48,7 +49,7 @@
 @media (min-width: 768px) {
   .nav {
     display: flex;
-    height: 100px;
+    /* height: 100px; */
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -64,6 +65,7 @@
   .navRight {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     width: 50%;
   }
 }
