--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,6 +1,6 @@
 .nav {
-  /* height: 100px; */
-  width: 90%;
+  display: flex;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -9,7 +9,6 @@
   }
 
   .nav a:not(:last-child) {
-    /* padding: 0 1.5em 0 0; */
     margin: 0 1.5em 0 0;
   }
 
@@ -19,11 +18,15 @@
   }
 
 .navLeft {
+  width: 25%;
   margin: 0 0 1rem;
 }
 
 .navRight {
-  /* align-items: center; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .logo {
@@ -41,15 +44,12 @@
   /* transition: .05s position linear; */
 }
 
-.logo:hover span {
-  opacity: 1;
-  position: relative;
-}
-
 @media (min-width: 768px) {
   .nav {
     display: flex;
-    /* height: 100px; */
+    width: 90%;
+    max-width: 1200px;
+    margin-top: 50px;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -63,9 +63,11 @@
   }
   
   .navRight {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
     width: 50%;
+  }
+
+  .logo:hover span {
+    opacity: 1;
+    position: relative;
   }
 }
